<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerAlert"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_bg"
    android:padding="20dp">

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:src="@drawable/ic_cancel"
        android:contentDescription="Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/containLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancel">

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/dynamic_line"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/title"
            android:saveEnabled="true"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/task_input"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/dynamic_line"
            android:gravity="top|start"
            android:hint="@string/task"
            android:inputType="textMultiLine|textCapSentences"
            android:paddingTop="12dp"
            android:saveEnabled="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/color_2"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containLinear" />

</androidx.constraintlayout.widget.ConstraintLayout>